[package]
name = "conner"
version = "0.0.2-a5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "conner"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
indicatif = "0.17.7"
opencv = "0.85.3"
pyo3 = { version = "0.19.0", features = ["extension-module", "generate-import-lib"] }
rand = "0.8.5"
rayon = "1.8.0"
